Add the addBookToLibrary and display books functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../logo.png" alt="library logo">
+        <img src="../objects/logo.png" alt="library logo">
         <h1>Library</h1>
         <p>Add Books</p>
         <button>+</button>
@@ -20,6 +20,7 @@
     <div class="body">
         <h3>Your Books</h3>
         <!-- <img src="../pexels-rafael-cosquiere-2041540.jpg" alt="a big library filled with books"> -->
+        <div class="cards"></div>
     </div>
 </body>
 </html>
