--- a/index.html
+++ b/index.html
@@ -11,11 +11,35 @@
 <link href="https://fonts.googleapis.com/css2?family=Honk&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <dialog>
+        <form>
+            <div>
+                <label for="title">Title<span aria-label="required">*</span></label>
+                <input type="text" id="title" maxlength="70" autofocus required>
+            </div>
+            <div>
+                <label for="author">Author<span aria-label="required">*</span></label>
+                <input type="text" id="author" required>
+            </div>
+            <div>
+                <label for="pages">Pages<span aria-label="required">*</span></label>
+                <input type="number" step="1"  max="10000" id="pages" required>
+            </div>
+            <div class="checkbox">
+                <label for="read">Read?</label>
+                <input type="checkbox" id="read">
+            </div>
+            <div class="buttons">
+                <button type="submit" formmethod="dialog" class="cancel" formnovalidate>Cancel</button>
+                <button type="submit" class="confirm">Confirm</button>
+            </div>
+        </form>
+    </dialog>
     <div class="header">
         <img src="../objects/logo.png" alt="library logo">
         <h1>Library</h1>
         <p>Add Books</p>
-        <button>+</button>
+        <button class="addBook">+</button>
     </div>
     <div class="body">
         <h3>Your Books</h3>
